--- a/index.html
+++ b/index.html
@@ -1445,7 +1445,7 @@
         
         setTimeout(() => {
           element.style.opacity = '1';
-          element.style.transform = 'translateY(0);
+          element.style.transform = 'translateY(0)';
         }, 100);
       });
     });
