Mevcut home-1.html'i Verinin Mutfağı için uyarla

--- a/index.html
+++ b/index.html
@@ -54,26 +54,26 @@
         <div class="sb-top-bar">
           <a href="index.html" class="sb-logo-frame">
             <!-- logo img -->
-            <img src="Verinin Mutfağı Logo 1.png" alt="Verinin Mutfağı" style="max-height: 40px;">
+            <img src="Verinin Mutfağı Logo 1.png" alt="Verinin Mutfağı">
           </a>
           <!-- menu -->
           <div class="sb-right-side">
             <nav id="sb-dynamic-menu" class="sb-menu-transition">
               <ul class="sb-navigation">
                 <li class="sb-active">
-                  <a href="#home">Ana Sayfa</a>
+                  <a href="index.html">Ana Sayfa</a>
                 </li>
                 <li>
-                  <a href="#services">Hizmetler</a>
+                  <a href="#hizmetler">Hizmetler</a>
                 </li>
                 <li>
-                  <a href="#projects">Projeler</a>
+                  <a href="#projeler">Projeler</a>
                 </li>
                 <li>
-                  <a href="#about">Hakkımızda</a>
+                  <a href="#hakkimizda">Hakkımızda</a>
                 </li>
                 <li>
-                  <a href="#contact">İletişim</a>
+                  <a href="contact.html">İletişim</a>
                 </li>
               </ul>
             </nav>
@@ -125,7 +125,7 @@
     <div id="sb-dynamic-content" class="sb-transition-fade">
 
       <!-- banner -->
-      <section id="home" class="sb-banner">
+      <section class="sb-banner">
         <div class="sb-bg-1">
           <div></div>
         </div>
@@ -139,7 +139,7 @@
                   <h1 class="sb-mb-30">Biz sadece <span>kod</span> yazmıyoruz, <br>verilerinizi <span>anlamlı</span> hale <br>getiriyoruz!</h1>
                   <p class="sb-text sb-text-lg sb-mb-30">AI chatbot'lar, veri analizi ve süreç otomasyonu ile<br>işletmenizi dijital dönüşüme hazırlıyoruz.</p>
                   <!-- button -->
-                  <a href="#services" class="sb-btn">
+                  <a href="#hizmetler" class="sb-btn">
                     <span class="sb-icon">
                       <img src="img/ui/icons/menu.svg" alt="icon">
                     </span>
@@ -147,7 +147,7 @@
                   </a>
                   <!-- button end -->
                   <!-- button -->
-                  <a href="#about" class="sb-btn sb-btn-2 sb-btn-gray">
+                  <a href="#hakkimizda" class="sb-btn sb-btn-2 sb-btn-gray">
                     <span class="sb-icon">
                       <img src="img/ui/icons/arrow.svg" alt="icon">
                     </span>
@@ -230,7 +230,7 @@
       <!-- features end -->
 
       <!-- services -->
-      <section id="services" class="sb-p-0-60">
+      <section id="hizmetler" class="sb-p-0-60">
         <div class="container">
           <div class="sb-group-title sb-mb-30">
             <div class="sb-left sb-mb-30">
@@ -239,7 +239,7 @@
             </div>
             <div class="sb-right sb-mb-30">
               <!-- button -->
-              <a href="#projects" class="sb-btn sb-m-0">
+              <a href="#projeler" class="sb-btn sb-m-0">
                 <span class="sb-icon">
                   <img src="img/ui/icons/arrow.svg" alt="icon">
                 </span>
@@ -250,7 +250,7 @@
           </div>
           <div class="row">
             <div class="col-lg-6">
-              <a href="#contact" class="sb-categorie-card sb-categorie-card-2 sb-mb-30">
+              <a href="contact.html" class="sb-categorie-card sb-categorie-card-2 sb-mb-30">
                 <div class="sb-card-body">
                   <div class="sb-category-icon">
                     <img src="img/categories/1.png" alt="icon">
@@ -263,7 +263,7 @@
               </a>
             </div>
             <div class="col-lg-6">
-              <a href="#contact" class="sb-categorie-card sb-categorie-card-2 sb-mb-30">
+              <a href="contact.html" class="sb-categorie-card sb-categorie-card-2 sb-mb-30">
                 <div class="sb-card-body">
                   <div class="sb-category-icon">
                     <img src="img/categories/2.png" alt="icon">
@@ -276,7 +276,7 @@
               </a>
             </div>
             <div class="col-lg-6">
-              <a href="#contact" class="sb-categorie-card sb-categorie-card-2 sb-mb-30">
+              <a href="contact.html" class="sb-categorie-card sb-categorie-card-2 sb-mb-30">
                 <div class="sb-card-body">
                   <div class="sb-category-icon">
                     <img src="img/categories/3.png" alt="icon">
@@ -289,7 +289,7 @@
               </a>
             </div>
             <div class="col-lg-6">
-              <a href="#contact" class="sb-categorie-card sb-categorie-card-2 sb-mb-30">
+              <a href="contact.html" class="sb-categorie-card sb-categorie-card-2 sb-mb-30">
                 <div class="sb-card-body">
                   <div class="sb-category-icon">
                     <img src="img/categories/4.png" alt="icon">
@@ -307,7 +307,7 @@
       <!-- services end -->
 
       <!-- projects -->
-      <section id="projects" class="sb-short-menu sb-p-0-90">
+      <section id="projeler" class="sb-short-menu sb-p-0-90">
         <div class="sb-bg-2">
           <div></div>
         </div>
@@ -325,7 +325,7 @@
               </div>
               <!-- slider navigation end -->
               <!-- button -->
-              <a href="#contact" class="sb-btn">
+              <a href="contact.html" class="sb-btn">
                 <span class="sb-icon">
                   <img src="img/ui/icons/arrow.svg" alt="icon">
                 </span>
@@ -337,7 +337,7 @@
           <div class="swiper-container sb-short-menu-slider-3i">
             <div class="swiper-wrapper">
               <div class="swiper-slide">
-                <div class="sb-menu-item">
+                <a data-fancybox="projects" data-no-swup href="img/menu/1.jpg" class="sb-menu-item">
                   <div class="sb-cover-frame">
                     <img src="img/menu/1.jpg" alt="project">
                     <div class="sb-badge sb-vegan"><i class="fas fa-shield-alt"></i> AI</div>
@@ -356,10 +356,10 @@
                       <li><i class="fas fa-star"></i></li>
                     </ul>
                   </div>
-                </div>
+                </a>
               </div>
               <div class="swiper-slide">
-                <div class="sb-menu-item">
+                <a data-fancybox="projects" data-no-swup href="img/menu/2.jpg" class="sb-menu-item">
                   <div class="sb-cover-frame">
                     <img src="img/menu/2.jpg" alt="project">
                     <div class="sb-badge sb-hot"><i class="fas fa-chart-line"></i> Analytics</div>
@@ -378,10 +378,10 @@
                       <li><i class="fas fa-star"></i></li>
                     </ul>
                   </div>
-                </div>
+                </a>
               </div>
               <div class="swiper-slide">
-                <div class="sb-menu-item">
+                <a data-fancybox="projects" data-no-swup href="img/menu/3.jpg" class="sb-menu-item">
                   <div class="sb-cover-frame">
                     <img src="img/menu/3.jpg" alt="project">
                   </div>
@@ -399,10 +399,10 @@
                       <li><i class="fas fa-star"></i></li>
                     </ul>
                   </div>
-                </div>
+                </a>
               </div>
               <div class="swiper-slide">
-                <div class="sb-menu-item">
+                <a data-fancybox="projects" data-no-swup href="img/menu/4.jpg" class="sb-menu-item">
                   <div class="sb-cover-frame">
                     <img src="img/menu/4.jpg" alt="project">
                   </div>
@@ -420,7 +420,28 @@
                       <li><i class="fas fa-star"></i></li>
                     </ul>
                   </div>
-                </div>
+                </a>
+              </div>
+              <div class="swiper-slide">
+                <a data-fancybox="projects" data-no-swup href="img/menu/5.jpg" class="sb-menu-item">
+                  <div class="sb-cover-frame">
+                    <img src="img/menu/5.jpg" alt="project">
+                  </div>
+                  <div class="sb-card-tp">
+                    <h3 class="sb-card-title">Web Scraping Sistemi</h3>
+                    <div class="sb-price">Python + Selenium</div>
+                  </div>
+                  <div class="sb-description">
+                    <p class="sb-text sb-mb-15">Otomatik veri toplama sistemi. <span>Fiyat takibi</span>, <span>Rakip analizi</span>, <span>Pazar araştırması</span>, <span>Veri temizleme</span>.</p>
+                    <ul class="sb-stars">
+                      <li><i class="fas fa-star"></i></li>
+                      <li><i class="fas fa-star"></i></li>
+                      <li><i class="fas fa-star"></i></li>
+                      <li><i class="fas fa-star"></i></li>
+                      <li><i class="fas fa-star"></i></li>
+                    </ul>
+                  </div>
+                </a>
               </div>
             </div>
           </div>
@@ -429,7 +450,7 @@
       <!-- projects end -->
 
       <!-- about -->
-      <section id="about" class="sb-about-text sb-p-90-0">
+      <section id="hakkimizda" class="sb-about-text sb-p-90-0">
         <div class="sb-bg-1" style="margin-top: 90px">
           <div></div>
         </div>
@@ -464,7 +485,7 @@
       </section>
       <!-- about end -->
 
-      <!-- stats -->
+      <!-- features -->
       <section class="sb-features sb-p-0-30">
         <div class="container">
           <div class="row">
@@ -516,132 +537,7 @@
           </div>
         </div>
       </section>
-      <!-- stats end -->
-
-      <!-- contact -->
-      <section id="contact" class="sb-banner sb-banner-color">
-        <div class="container">
-          <div class="row align-items-center">
-            <div class="col-lg-7">
-              <!-- main title -->
-              <div class="sb-main-title-frame">
-                <div class="sb-main-title">
-                  <span class="sb-suptitle sb-mb-30">İletişim</span>
-                  <h1 class="sb-mb-30">Verinin Mutfağı ile <span>İletişime Geçin</span></h1>
-                  <p class="sb-text sb-text-lg sb-mb-30">Projeleriniz hakkında konuşmak ve size nasıl yardımcı<br>olabileceğimizi öğrenmek için bizimle iletişime geçin.</p>
-                </div>
-              </div>
-              <!-- main title end -->
-            </div>
-            <div class="col-lg-5">
-              <div class="sb-contact-form-frame">
-                <div class="sb-illustration-9">
-                  <img src="img/illustrations/envelope-1.png" alt="envelope" class="sb-envelope-1">
-                  <img src="img/illustrations/envelope-2.png" alt="envelope" class="sb-envelope-2">
-                  <div class="sb-cirkle-1"></div>
-                  <div class="sb-cirkle-2"></div>
-                  <div class="sb-cirkle-3"></div>
-                </div>
-                <div class="sb-form-content">
-                  <div class="sb-main-content">
-                    <h3 class="sb-mb-30">Mesaj Gönderin</h3>
-                    <form id="form">
-                      <div class="sb-group-input">
-                        <input type="text" name="name" required>
-                        <span class="sb-bar"></span>
-                        <label>Ad Soyad</label>
-                      </div>
-                      <div class="sb-group-input">
-                        <input type="email" name="email" required>
-                        <span class="sb-bar"></span>
-                        <label>E-posta</label>
-                      </div>
-                      <div class="sb-group-input">
-                        <input type="text" name="company" required>
-                        <span class="sb-bar"></span>
-                        <label>Şirket</label>
-                      </div>
-                      <div class="sb-group-input">
-                        <textarea name="text" required></textarea>
-                        <span class="sb-bar"></span>
-                        <label>Mesaj</label>
-                      </div>
-                      <p class="sb-text sb-text-xs sb-mb-30">*Kişisel bilgilerinizi üçüncü taraflarla <br>paylaşmayacağımızı taahhüt ediyoruz.</p>
-                      <!-- button -->
-                      <button class="sb-btn sb-cf-submit sb-show-success">
-                        <span class="sb-icon">
-                          <img src="img/ui/icons/arrow.svg" alt="icon">
-                        </span>
-                        <span>Gönder</span>
-                      </button>
-                      <!-- button end -->
-                    </form>
-                  </div>
-                  <div class="sb-success-result">
-                    <img src="img/ui/success.jpg" alt="success" class="sb-mb-15">
-                    <div class="sb-success-title sb-mb-15">Başarılı!</div>
-                    <p class="sb-text sb-mb-15">Mesajınız başarıyla gönderildi. <br>En kısa sürede size dönüş yapacağız.</p>
-                    <!-- button -->
-                    <a href="#home" class="sb-btn sb-btn-2">
-                      <span class="sb-icon">
-                        <img src="img/ui/icons/arrow-2.svg" alt="icon">
-                      </span>
-                      <span>Ana sayfaya dön</span>
-                    </a>
-                    <!-- button end -->
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </section>
-      <!-- contact end -->
-
-      <!-- contact info -->
-      <section class="sb-p-90-30">
-        <div class="container">
-          <div class="row">
-            <div class="col-lg-3">
-              <div class="sb-features-item sb-mb-60">
-                <div class="sb-number">01</div>
-                <div class="sb-feature-text">
-                  <h3 class="sb-mb-15">Hoş geldiniz</h3>
-                  <p class="sb-text">İstanbul, Türkiye</p>
-                </div>
-              </div>
-            </div>
-            <div class="col-lg-3">
-              <div class="sb-features-item sb-mb-60">
-                <div class="sb-number">02</div>
-                <div class="sb-feature-text">
-                  <h3 class="sb-mb-15">Arayın</h3>
-                  <p class="sb-text">+90 (555) 123-4567</p>
-                </div>
-              </div>
-            </div>
-            <div class="col-lg-3">
-              <div class="sb-features-item sb-mb-60">
-                <div class="sb-number">03</div>
-                <div class="sb-feature-text">
-                  <h3 class="sb-mb-15">Yazın</h3>
-                  <p class="sb-text">info@verininmutfagi.com</p>
-                </div>
-              </div>
-            </div>
-            <div class="col-lg-3">
-              <div class="sb-features-item sb-mb-60">
-                <div class="sb-number">04</div>
-                <div class="sb-feature-text">
-                  <h3 class="sb-mb-15">Çalışma Saatleri</h3>
-                  <p class="sb-text">Pazartesi - Cuma: 09:00 - 18:00</p>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </section>
-      <!-- contact info end -->
+      <!-- features end -->
 
       <!-- call to action -->
       <section class="sb-call-to-action">
@@ -650,10 +546,10 @@
           <div class="row">
             <div class="col-lg-6 align-self-center">
               <div class="sb-cta-text">
-                <h2 class="sb-h1 sb-mb-30">Ücretsiz danışmanlık hizmeti.</h2>
+                <h2 class="sb-h1 sb-mb-15">Ücretsiz danışmanlık hizmeti.</h2>
                 <p class="sb-text sb-mb-30">*Projeleriniz hakkında konuşmak için<br>ücretsiz danışmanlık toplantısı ayarlayın.</p>
                 <!-- button -->
-                <a href="#contact" class="sb-btn">
+                <a href="contact.html" class="sb-btn">
                   <span class="sb-icon">
                     <img src="img/ui/icons/phone.svg" alt="icon">
                   </span>
@@ -661,7 +557,7 @@
                 </a>
                 <!-- button end -->
                 <!-- button -->
-                <a href="#services" class="sb-btn sb-btn-2 sb-btn-gray">
+                <a href="#hizmetler" class="sb-btn sb-btn-2 sb-btn-gray">
                   <span class="sb-icon">
                     <img src="img/ui/icons/menu.svg" alt="icon">
                   </span>
@@ -693,7 +589,7 @@
           <div class="sb-footer-frame">
             <a href="index.html" class="sb-logo-frame">
               <!-- logo img -->
-              <img src="Verinin Mutfağı Logo 1.png" alt="Verinin Mutfağı" style="max-height: 40px;">
+              <img src="Verinin Mutfağı Logo 1.png" alt="Verinin Mutfağı">
             </a>
             <ul class="sb-social">
               <li><a href="#."><i class="fab fa-linkedin"></i></a></li>
@@ -733,29 +629,6 @@
   <script src="js/plugins/fancybox.min.js"></script>
   <!-- starbelly js -->
   <script src="js/main.js"></script>
-
-  <script>
-    // Smooth scrolling for anchor links
-    document.addEventListener('DOMContentLoaded', function() {
-      const links = document.querySelectorAll('a[href^="#"]');
-      
-      links.forEach(link => {
-        link.addEventListener('click', function(e) {
-          e.preventDefault();
-          const targetId = this.getAttribute('href').substring(1);
-          const targetElement = document.getElementById(targetId);
-          
-          if (targetElement) {
-            const offsetTop = targetElement.offsetTop - 100;
-            window.scrollTo({
-              top: offsetTop,
-              behavior: 'smooth'
-            });
-          }
-        });
-      });
-    });
-  </script>
 
 </body>
 
