--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="zxx">
+<html lang="tr">
 
 <head>
   <meta charset="UTF-8">
@@ -24,7 +24,7 @@
   <!-- starbelly css -->
   <link rel="stylesheet" href="css/style.css">
   <!-- page title -->
-  <title>Starbelly</title>
+  <title>İletişim - Verinin Mutfağı</title>
 </head>
 
 <body>
@@ -52,77 +52,32 @@
       <div class="sb-top-bar-bg"></div>
       <div class="container">
         <div class="sb-top-bar">
-          <a href="home-1.html" class="sb-logo-frame">
+          <a href="index.html" class="sb-logo-frame">
             <!-- logo img -->
-            <img src="img/ui/logo.svg" alt="Starbelly">
+            <img src="Verinin Mutfağı Logo 1.png" alt="Verinin Mutfağı">
           </a>
           <!-- menu -->
           <div class="sb-right-side">
             <nav id="sb-dynamic-menu" class="sb-menu-transition">
               <ul class="sb-navigation">
-                <li class="sb-has-children">
-                  <a href="home-1.html">Home</a>
-                  <ul>
-                    <li><a href="home-1.html">Type 1</a></li>
-                    <li><a href="home-2.html">Type 2</a></li>
-                  </ul>
+                <li>
+                  <a href="index.html">Ana Sayfa</a>
                 </li>
-                <li class="sb-has-children">
-                  <a href="about-1.html">Pages</a>
-                  <ul>
-                    <li><a href="about-1.html">About 1</a></li>
-                    <li><a href="about-2.html">About 2</a></li>
-                    <li><a href="blog-1.html">Blog style 1</a></li>
-                    <li><a href="blog-2.html">Blog style 2</a></li>
-                    <li><a href="blog-3.html">Blog style 3</a></li>
-                    <li><a href="publication-1.html">Publication 1</a></li>
-                    <li><a href="publication-2.html">Publication 2</a></li>
-                    <li><a href="publication-3.html">Publication 3</a></li>
-                    <li><a href="gallery.html">Gallery</a></li>
-                    <li><a href="gallery-2.html">Gallery 2</a></li>
-                    <li><a href="reviews.html">Reviews</a></li>
-                    <li><a href="reservation.html">Reservation</a></li>
-                    <li><a href="faq.html">FAQ</a></li>
-                    <li><a href="404.html">404</a></li>
-                  </ul>
+                <li>
+                  <a href="index.html#hizmetler">Hizmetler</a>
                 </li>
-                <li class="sb-has-children">
-                  <a href="menu-1.html">Menu</a>
-                  <ul>
-                    <li><a href="menu-1.html">Menu style 1</a></li>
-                    <li><a href="menu-2.html">Menu style 2</a></li>
-                    <li><a href="menu-3.html">Menu style 3</a></li>
-                    <li><a href="menu-4.html">Menu style 4</a></li>
-                    <li><a href="menu-5.html">Menu style 5</a></li>
-                    <li><a href="menu-6.html">Menu style 6</a></li>
-                  </ul>
+                <li>
+                  <a href="index.html#projeler">Projeler</a>
                 </li>
-                <li class="sb-has-children">
-                  <a href="shop-1.html">Shop</a>
-                  <ul>
-                    <li><a href="shop-1.html">Shop style 1</a></li>
-                    <li><a href="shop-2.html">Shop style 2</a></li>
-                    <li><a href="shop-list-1.html">Shop list 1</a></li>
-                    <li><a href="shop-list-2.html">Shop list 2</a></li>
-                    <li><a href="product.html">Product page</a></li>
-                    <li><a href="cart.html">Cart</a></li>
-                    <li><a href="checkout.html">Checkout</a></li>
-                  </ul>
+                <li>
+                  <a href="index.html#hakkimizda">Hakkımızda</a>
                 </li>
                 <li class="sb-active">
-                  <a href="contact.html">Contact</a>
+                  <a href="contact.html">İletişim</a>
                 </li>
               </ul>
             </nav>
             <div class="sb-buttons-frame">
-              <!-- button -->
-              <div class="sb-btn sb-btn-2 sb-btn-gray sb-btn-icon sb-m-0 sb-btn-cart">
-                <span class="sb-icon">
-                  <img src="img/ui/icons/cart.svg" alt="icon">
-                </span>
-                <i class="sb-cart-number">5</i>
-              </div>
-              <!-- button end -->
               <!-- menu btn -->
               <div class="sb-menu-btn"><span></span></div>
               <!-- info btn -->
@@ -135,133 +90,34 @@
       <div class="sb-info-bar">
         <div class="sb-infobar-content">
           <div class="sb-ib-title-frame sb-mb-30">
-            <h4>Contact</h4><i class="fas fa-arrow-down"></i>
+            <h4>İletişim</h4><i class="fas fa-arrow-down"></i>
           </div>
           <ul class="sb-list sb-mb-30">
-            <li><b>Address:</b><span>Montréal, 1510 Rue Sauvé</span></li>
-            <li><b>Working hours:</b><span>09:00 - 23:00</span></li>
-            <li><b>Phone:</b><span>+02 (044) 756-X6-52</span></li>
-            <li><b>Email:</b><span>starbelly@mail.com</span></li>
+            <li><b>Adres:</b><span>İstanbul, Türkiye</span></li>
+            <li><b>Çalışma saatleri:</b><span>09:00 - 18:00</span></li>
+            <li><b>Telefon:</b><span>+90 (555) 123-4567</span></li>
+            <li><b>Email:</b><span>info@verininmutfagi.com</span></li>
           </ul>
           <div class="sb-ib-title-frame sb-mb-30">
-            <h4>Instagram</h4><i class="fas fa-arrow-down"></i>
+            <h4>Sosyal Medya</h4><i class="fas fa-arrow-down"></i>
           </div>
-          <ul class="sb-instagram sb-mb-30">
-            <li><a href="#."><img src="img/instagram/1.jpg" alt="instagram"></a></li>
-            <li><a href="#."><img src="img/instagram/2.jpg" alt="instagram"></a></li>
-            <li><a href="#."><img src="img/instagram/3.jpg" alt="instagram"></a></li>
-            <li><a href="#."><img src="img/instagram/4.jpg" alt="instagram"></a></li>
-            <li><a href="#."><img src="img/instagram/5.jpg" alt="instagram"></a></li>
-            <li><a href="#."><img src="img/instagram/6.jpg" alt="instagram"></a></li>
+          <ul class="sb-social sb-mb-30">
+            <li><a href="#."><i class="fab fa-linkedin"></i></a></li>
+            <li><a href="#."><i class="fab fa-twitter"></i></a></li>
+            <li><a href="#."><i class="fab fa-github"></i></a></li>
+            <li><a href="#."><i class="fas fa-envelope"></i></a></li>
           </ul>
-          <hr>
-          <div class="sb-ib-title-frame sb-mb-30">
-            <h4>Latest publications</h4><i class="fas fa-arrow-down"></i>
-          </div>
-          <a href="publication-1.html" class="sb-blog-card sb-blog-card-sm sb-mb-30">
-            <div class="sb-cover-frame">
-              <img src="img/blog/1.jpg" alt="cover">
-            </div>
-            <div class="sb-blog-card-descr">
-              <h5 class="sb-mb-5">Simple Homemade Tomato Soup</h5>
-              <p class="sb-text sb-text-sm">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Libero optio, sed expedita.</p>
-            </div>
-          </a>
-          <a href="publication-1.html" class="sb-blog-card sb-blog-card-sm sb-mb-30">
-            <div class="sb-cover-frame">
-              <img src="img/blog/2.jpg" alt="cover">
-            </div>
-            <div class="sb-blog-card-descr">
-              <h5 class="sb-mb-5">Thai Coconut Soup with Tofu and Rice</h5>
-              <p class="sb-text sb-text-sm">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Libero optio, sed expedita.</p>
-            </div>
-          </a>
-          <a href="publication-1.html" class="sb-blog-card sb-blog-card-sm sb-mb-30">
-            <div class="sb-cover-frame">
-              <img src="img/blog/3.jpg" alt="cover">
-            </div>
-            <div class="sb-blog-card-descr">
-              <h5 class="sb-mb-5">21 Things You Should Absolutely Be Buying at ALDI</h5>
-              <p class="sb-text sb-text-sm">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Libero optio, sed expedita.</p>
-            </div>
-          </a>
         </div>
         <div class="sb-info-bar-footer">
           <ul class="sb-social">
-            <li><a href="#."><i class="far fa-circle"></i></a></li>
-            <li><a href="#."><i class="far fa-circle"></i></a></li>
-            <li><a href="#."><i class="far fa-circle"></i></a></li>
-            <li><a href="#."><i class="far fa-circle"></i></a></li>
+            <li><a href="#."><i class="fab fa-linkedin"></i></a></li>
+            <li><a href="#."><i class="fab fa-twitter"></i></a></li>
+            <li><a href="#."><i class="fab fa-github"></i></a></li>
+            <li><a href="#."><i class="fas fa-envelope"></i></a></li>
           </ul>
         </div>
       </div>
       <!-- info bar end -->
-      <!-- minicart -->
-      <div class="sb-minicart">
-        <div class="sb-minicart-content">
-          <div class="sb-ib-title-frame sb-mb-30">
-            <h4>Your order.</h4><i class="fas fa-arrow-down"></i>
-          </div>
-          <a href="product.html" class="sb-menu-item sb-menu-item-sm sb-mb-15">
-            <div class="sb-cover-frame">
-              <img src="img/menu/4.jpg" alt="product">
-            </div>
-            <div class="sb-card-tp">
-              <h4 class="sb-card-title">Saumon Gravlax</h4>
-              <div class="sb-price"><sub>$</sub> 9</div>
-            </div>
-          </a>
-          <a href="product.html" class="sb-menu-item sb-menu-item-sm sb-mb-15">
-            <div class="sb-cover-frame">
-              <img src="img/menu/1.jpg" alt="product">
-            </div>
-            <div class="sb-card-tp">
-              <h4 class="sb-card-title">Chevrefrit au miel</h4>
-              <div class="sb-price"><sub>$</sub> 14</div>
-            </div>
-          </a>
-          <a href="product.html" class="sb-menu-item sb-menu-item-sm sb-mb-15">
-            <div class="sb-cover-frame">
-              <img src="img/menu/2.jpg" alt="product">
-            </div>
-            <div class="sb-card-tp">
-              <h4 class="sb-card-title">Croustillant de poisson</h4>
-              <div class="sb-price"><sub>$</sub> 4</div>
-            </div>
-          </a>
-          <a href="product.html" class="sb-menu-item sb-menu-item-sm sb-mb-15">
-            <div class="sb-cover-frame">
-              <img src="img/menu/3.jpg" alt="product">
-            </div>
-            <div class="sb-card-tp">
-              <h4 class="sb-card-title">Stracciatella</h4>
-              <div class="sb-price"><sub>$</sub> 11</div>
-            </div>
-          </a>
-          <a href="product.html" class="sb-menu-item sb-menu-item-sm sb-mb-15">
-            <div class="sb-cover-frame">
-              <img src="img/menu/5.jpg" alt="product">
-            </div>
-            <div class="sb-card-tp">
-              <h4 class="sb-card-title">Carpaccio de daurade</h4>
-              <div class="sb-price"><sub>$</sub> 19</div>
-            </div>
-          </a>
-        </div>
-        <div class="sb-minicart-footer">
-          <!-- button -->
-          <a href="cart.html" class="sb-btn sb-btn-gray sb-btn-text">
-            <span>View order</span>
-          </a>
-          <!-- button end -->
-          <!-- button -->
-          <a href="checkout.html" class="sb-btn sb-btn-text">
-            <span>Checkout</span>
-          </a>
-          <!-- button end -->
-        </div>
-      </div>
-      <!-- minicart end -->
     </div>
     <!-- top bar end -->
 
@@ -276,12 +132,12 @@
               <!-- main title -->
               <div class="sb-main-title-frame">
                 <div class="sb-main-title">
-                  <span class="sb-suptitle sb-mb-30">Contact</span>
-                  <h1 class="sb-mb-30">Get in <span>Touch with Starbelly</span></h1>
-                  <p class="sb-text sb-text-lg sb-mb-30">Consectetur numquam poro nemo veniam<br>eligendi rem adipisci quo modi.</p>
+                  <span class="sb-suptitle sb-mb-30">İletişim</span>
+                  <h1 class="sb-mb-30">Verinin Mutfağı ile <span>İletişime Geçin</span></h1>
+                  <p class="sb-text sb-text-lg sb-mb-30">Projeleriniz hakkında konuşmak ve size nasıl yardımcı<br>olabileceğimizi öğrenmek için bizimle iletişime geçin.</p>
                   <ul class="sb-breadcrumbs">
-                    <li><a href="home-1.html">Home</a></li>
-                    <li><a href="menu-1.html">Contact</a></li>
+                    <li><a href="index.html">Ana Sayfa</a></li>
+                    <li><a href="contact.html">İletişim</a></li>
                   </ul>
                 </div>
               </div>
@@ -298,44 +154,44 @@
                 </div>
                 <div class="sb-form-content">
                   <div class="sb-main-content">
-                    <h3 class="sb-mb-30">Send Message</h3>
+                    <h3 class="sb-mb-30">Mesaj Gönderin</h3>
                     <form id="form">
                       <div class="sb-group-input">
                         <input type="text" name="name" required>
                         <span class="sb-bar"></span>
-                        <label>Name</label>
+                        <label>Ad Soyad</label>
                       </div>
                       <div class="sb-group-input">
                         <input type="email" name="email" required>
                         <span class="sb-bar"></span>
-                        <label>Email</label>
+                        <label>E-posta</label>
                       </div>
                       <div class="sb-group-input">
                         <textarea name="text" required></textarea>
                         <span class="sb-bar"></span>
-                        <label>Message</label>
+                        <label>Mesaj</label>
                       </div>
-                      <p class="sb-text sb-text-xs sb-mb-30">*We promise not to disclose your <br>personal information to third parties.</p>
+                      <p class="sb-text sb-text-xs sb-mb-30">*Kişisel bilgilerinizi üçüncü taraflarla <br>paylaşmayacağımızı taahhüt ediyoruz.</p>
                       <!-- button -->
                       <button class="sb-btn sb-cf-submit sb-show-success">
                         <span class="sb-icon">
                           <img src="img/ui/icons/arrow.svg" alt="icon">
                         </span>
-                        <span>Send</span>
+                        <span>Gönder</span>
                       </button>
                       <!-- button end -->
                     </form>
                   </div>
                   <div class="sb-success-result">
                     <img src="img/ui/success.jpg" alt="success" class="sb-mb-15">
-                    <div class="sb-success-title sb-mb-15">Success!</div>
-                    <p class="sb-text sb-mb-15">Your message has been sent <br>successfully</p>
+                    <div class="sb-success-title sb-mb-15">Başarılı!</div>
+                    <p class="sb-text sb-mb-15">Mesajınız başarıyla gönderildi <br>En kısa sürede size dönüş yapacağız</p>
                     <!-- button -->
-                    <a href="home-1.html" class="sb-btn sb-btn-2">
+                    <a href="index.html" class="sb-btn sb-btn-2">
                       <span class="sb-icon">
                         <img src="img/ui/icons/arrow-2.svg" alt="icon">
                       </span>
-                      <span>Back to home</span>
+                      <span>Ana sayfaya dön</span>
                     </a>
                     <!-- button end -->
                   </div>
@@ -355,8 +211,8 @@
               <div class="sb-features-item sb-mb-60">
                 <div class="sb-number">01</div>
                 <div class="sb-feature-text">
-                  <h3 class="sb-mb-15">Welcome</h3>
-                  <p class="sb-text">Montréal, 1510 Rue Sauvé</p>
+                  <h3 class="sb-mb-15">Hoş geldiniz</h3>
+                  <p class="sb-text">İstanbul, Türkiye</p>
                 </div>
               </div>
             </div>
@@ -364,8 +220,8 @@
               <div class="sb-features-item sb-mb-60">
                 <div class="sb-number">02</div>
                 <div class="sb-feature-text">
-                  <h3 class="sb-mb-15">Call</h3>
-                  <p class="sb-text">+02 (044) 756-X6-52</p>
+                  <h3 class="sb-mb-15">Arayın</h3>
+                  <p class="sb-text">+90 (555) 123-4567</p>
                 </div>
               </div>
             </div>
@@ -373,8 +229,8 @@
               <div class="sb-features-item sb-mb-60">
                 <div class="sb-number">03</div>
                 <div class="sb-feature-text">
-                  <h3 class="sb-mb-15">Write</h3>
-                  <p class="sb-text">starbelly@mail.com</p>
+                  <h3 class="sb-mb-15">Yazın</h3>
+                  <p class="sb-text">info@verininmutfagi.com</p>
                 </div>
               </div>
             </div>
@@ -383,28 +239,21 @@
       </section>
       <!-- contact info end -->
 
-      <!-- map -->
-      <div class="sb-map-frame">
-        <div id="map" class="sb-map"></div>
-        <div class="sb-lock"><i class="fas fa-lock"></i></div>
-      </div>
-      <!-- map end -->
-
       <!-- footer -->
       <footer>
         <div class="container">
           <div class="sb-footer-frame">
-            <a href="home-1.html" class="sb-logo-frame">
+            <a href="index.html" class="sb-logo-frame">
               <!-- logo img -->
-              <img src="img/ui/logo.svg" alt="Starbelly">
+              <img src="Verinin Mutfağı Logo 1.png" alt="Verinin Mutfağı">
             </a>
             <ul class="sb-social">
-              <li><a href="#."><i class="far fa-circle"></i></a></li>
-              <li><a href="#."><i class="far fa-circle"></i></a></li>
-              <li><a href="#."><i class="far fa-circle"></i></a></li>
-              <li><a href="#."><i class="far fa-circle"></i></a></li>
+              <li><a href="#."><i class="fab fa-linkedin"></i></a></li>
+              <li><a href="#."><i class="fab fa-twitter"></i></a></li>
+              <li><a href="#."><i class="fab fa-github"></i></a></li>
+              <li><a href="#."><i class="fas fa-envelope"></i></a></li>
             </ul>
-            <div class="sb-copy">&copy; late 2021 Starbelly. All Rights Reserved.</div>
+            <div class="sb-copy">&copy; 2024 Verinin Mutfağı. Tüm hakları saklıdır.</div>
           </div>
         </div>
       </footer>
