Fix jQuery library and add Vite client script

--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
   <link rel="stylesheet" href="css/style.css">
   <!-- page title -->
   <title>Verinin Mutfağı - Veri Analizi ve Otomasyon Çözümleri</title>
+  <!-- vite client -->
+  <script type="module" src="/@vite/client"></script>
 </head>
 
 <body>
