--- a/contact.html
+++ b/contact.html
@@ -25,6 +25,8 @@
   <link rel="stylesheet" href="css/style.css">
   <!-- page title -->
   <title>İletişim - Verinin Mutfağı</title>
+  <!-- vite client -->
+  <script type="module" src="/@vite/client"></script>
 </head>
 
 <body>
