--- a/index.html
+++ b/index.html
@@ -610,7 +610,7 @@
   <!-- app wrapper end -->
 
   <!-- jquery js -->
-  <script src="js/plugins/jquery.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
   <!-- smooth scroll js -->
   <script src="js/plugins/smooth-scroll.js"></script>
   <!-- swup js -->
