--- a/contact.html
+++ b/contact.html
@@ -8,21 +8,21 @@
   <!-- color of address bar in mobile browser -->
   <meta name="theme-color" content="#F5C332">
   <!-- favicon  -->
-  <link rel="shortcut icon" href="img/ui/logo.ico" type="image/x-icon">
+  <link rel="shortcut icon" href="/img/ui/logo.ico" type="image/x-icon">
   <!-- font awesome css -->
-  <link rel="stylesheet" href="css/plugins/font-awesome.min.css">
+  <link rel="stylesheet" href="/css/plugins/font-awesome.min.css">
   <!-- bootstrap css -->
-  <link rel="stylesheet" href="css/plugins/bootstrap.min.css">
+  <link rel="stylesheet" href="/css/plugins/bootstrap.min.css">
   <!-- swiper css -->
-  <link rel="stylesheet" href="css/plugins/swiper.min.css">
+  <link rel="stylesheet" href="/css/plugins/swiper.min.css">
   <!-- datepicker css -->
-  <link rel="stylesheet" href="css/plugins/datepicker.css">
+  <link rel="stylesheet" href="/css/plugins/datepicker.css">
   <!-- mapbox css -->
-  <link href="css/plugins/mapbox-style.css" rel='stylesheet'>
+  <link href="/css/plugins/mapbox-style.css" rel='stylesheet'>
   <!-- fancybox css -->
-  <link rel="stylesheet" href="css/plugins/fancybox.min.css">
+  <link rel="stylesheet" href="/css/plugins/fancybox.min.css">
   <!-- starbelly css -->
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="/css/style.css">
   <!-- page title -->
   <title>İletişim - Verinin Mutfağı</title>
 </head>
@@ -54,7 +54,7 @@
         <div class="sb-top-bar">
           <a href="index.html" class="sb-logo-frame">
             <!-- logo img -->
-            <img src="Verinin Mutfağı Logo 1.png" alt="Verinin Mutfağı">
+            <img src="/Verinin Mutfağı Logo 1.png" alt="Verinin Mutfağı">
           </a>
           <!-- menu -->
           <div class="sb-right-side">
@@ -146,8 +146,8 @@
             <div class="col-lg-5">
               <div class="sb-contact-form-frame">
                 <div class="sb-illustration-9">
-                  <img src="img/illustrations/envelope-1.png" alt="envelope" class="sb-envelope-1">
-                  <img src="img/illustrations/envelope-2.png" alt="envelope" class="sb-envelope-2">
+                  <img src="/img/illustrations/envelope-1.png" alt="envelope" class="sb-envelope-1">
+                  <img src="/img/illustrations/envelope-2.png" alt="envelope" class="sb-envelope-2">
                   <div class="sb-cirkle-1"></div>
                   <div class="sb-cirkle-2"></div>
                   <div class="sb-cirkle-3"></div>
@@ -175,7 +175,7 @@
                       <!-- button -->
                       <button class="sb-btn sb-cf-submit sb-show-success">
                         <span class="sb-icon">
-                          <img src="img/ui/icons/arrow.svg" alt="icon">
+                          <img src="/img/ui/icons/arrow.svg" alt="icon">
                         </span>
                         <span>Gönder</span>
                       </button>
@@ -183,13 +183,13 @@
                     </form>
                   </div>
                   <div class="sb-success-result">
-                    <img src="img/ui/success.jpg" alt="success" class="sb-mb-15">
+                    <img src="/img/ui/success.jpg" alt="success" class="sb-mb-15">
                     <div class="sb-success-title sb-mb-15">Başarılı!</div>
                     <p class="sb-text sb-mb-15">Mesajınız başarıyla gönderildi <br>En kısa sürede size dönüş yapacağız</p>
                     <!-- button -->
                     <a href="index.html" class="sb-btn sb-btn-2">
                       <span class="sb-icon">
-                        <img src="img/ui/icons/arrow-2.svg" alt="icon">
+                        <img src="/img/ui/icons/arrow-2.svg" alt="icon">
                       </span>
                       <span>Ana sayfaya dön</span>
                     </a>
@@ -245,7 +245,7 @@
           <div class="sb-footer-frame">
             <a href="index.html" class="sb-logo-frame">
               <!-- logo img -->
-              <img src="Verinin Mutfağı Logo 1.png" alt="Verinin Mutfağı">
+              <img src="/Verinin Mutfağı Logo 1.png" alt="Verinin Mutfağı">
             </a>
             <ul class="sb-social">
               <li><a href="#."><i class="fab fa-linkedin"></i></a></li>
@@ -266,25 +266,25 @@
   <!-- app wrapper end -->
 
   <!-- jquery js -->
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+  <script src="/js/plugins/jquery.min.js"></script>
   <!-- smooth scroll js -->
-  <script src="js/plugins/smooth-scroll.js"></script>
+  <script src="/js/plugins/smooth-scroll.js"></script>
   <!-- swup js -->
-  <script src="js/plugins/swup.min.js"></script>
+  <script src="/js/plugins/swup.min.js"></script>
   <!-- swiper js -->
-  <script src="js/plugins/swiper.min.js"></script>
+  <script src="/js/plugins/swiper.min.js"></script>
   <!-- datepicker js -->
-  <script src="js/plugins/datepicker.js"></script>
+  <script src="/js/plugins/datepicker.js"></script>
   <!-- isotope js -->
-  <script src="js/plugins/isotope.js"></script>
+  <script src="/js/plugins/isotope.js"></script>
   <!-- sticky -->
-  <script src="js/plugins/sticky.js"></script>
+  <script src="/js/plugins/sticky.js"></script>
   <!-- mapbox js -->
-  <script src="js/plugins/mapbox.min.js"></script>
+  <script src="/js/plugins/mapbox.min.js"></script>
   <!-- fancybox js -->
-  <script src="js/plugins/fancybox.min.js"></script>
+  <script src="/js/plugins/fancybox.min.js"></script>
   <!-- starbelly js -->
-  <script src="js/main.js"></script>
+  <script src="/js/main.js"></script>
 
 </body>
 
