--- a/index.html
+++ b/index.html
@@ -8,21 +8,21 @@
   <!-- color of address bar in mobile browser -->
   <meta name="theme-color" content="#F5C332">
   <!-- favicon  -->
-  <link rel="shortcut icon" href="img/ui/logo.ico" type="image/x-icon">
+  <link rel="shortcut icon" href="/img/ui/logo.ico" type="image/x-icon">
   <!-- font awesome css -->
-  <link rel="stylesheet" href="css/plugins/font-awesome.min.css">
+  <link rel="stylesheet" href="/css/plugins/font-awesome.min.css">
   <!-- bootstrap css -->
-  <link rel="stylesheet" href="css/plugins/bootstrap.min.css">
+  <link rel="stylesheet" href="/css/plugins/bootstrap.min.css">
   <!-- swiper css -->
-  <link rel="stylesheet" href="css/plugins/swiper.min.css">
+  <link rel="stylesheet" href="/css/plugins/swiper.min.css">
   <!-- datepicker css -->
-  <link rel="stylesheet" href="css/plugins/datepicker.css">
+  <link rel="stylesheet" href="/css/plugins/datepicker.css">
   <!-- mapbox css -->
-  <link href="css/plugins/mapbox-style.css" rel='stylesheet'>
+  <link href="/css/plugins/mapbox-style.css" rel='stylesheet'>
   <!-- fancybox css -->
-  <link rel="stylesheet" href="css/plugins/fancybox.min.css">
+  <link rel="stylesheet" href="/css/plugins/fancybox.min.css">
   <!-- starbelly css -->
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="/css/style.css">
   <!-- page title -->
   <title>Verinin Mutfağı - Veri Analizi ve Otomasyon Çözümleri</title>
 </head>
@@ -54,7 +54,7 @@
         <div class="sb-top-bar">
           <a href="index.html" class="sb-logo-frame">
             <!-- logo img -->
-            <img src="Verinin Mutfağı Logo 1.png" alt="Verinin Mutfağı">
+            <img src="/Verinin Mutfağı Logo 1.png" alt="Verinin Mutfağı">
           </a>
           <!-- menu -->
           <div class="sb-right-side">
@@ -141,7 +141,7 @@
                   <!-- button -->
                   <a href="#hizmetler" class="sb-btn">
                     <span class="sb-icon">
-                      <img src="img/ui/icons/menu.svg" alt="icon">
+                      <img src="/img/ui/icons/menu.svg" alt="icon">
                     </span>
                     <span>Hizmetlerimiz</span>
                   </a>
@@ -149,7 +149,7 @@
                   <!-- button -->
                   <a href="#hakkimizda" class="sb-btn sb-btn-2 sb-btn-gray">
                     <span class="sb-icon">
-                      <img src="img/ui/icons/arrow.svg" alt="icon">
+                      <img src="/img/ui/icons/arrow.svg" alt="icon">
                     </span>
                     <span>Hakkımızda</span>
                   </a>
@@ -160,15 +160,15 @@
             </div>
             <div class="col-lg-6">
               <div class="sb-illustration-1">
-                <img src="img/illustrations/girl.png" alt="data analyst" class="sb-girl">
+                <img src="/img/illustrations/girl.png" alt="data analyst" class="sb-girl">
                 <div class="sb-cirkle-1"></div>
                 <div class="sb-cirkle-2"></div>
                 <div class="sb-cirkle-3"></div>
                 <div class="sb-cirkle-4"></div>
                 <div class="sb-cirkle-5"></div>
-                <img src="img/illustrations/3.svg" alt="data" class="sb-pik-1">
-                <img src="img/illustrations/1.svg" alt="analytics" class="sb-pik-2">
-                <img src="img/illustrations/2.svg" alt="automation" class="sb-pik-3">
+                <img src="/img/illustrations/3.svg" alt="data" class="sb-pik-1">
+                <img src="/img/illustrations/1.svg" alt="analytics" class="sb-pik-2">
+                <img src="/img/illustrations/2.svg" alt="automation" class="sb-pik-3">
               </div>
             </div>
           </div>
@@ -209,7 +209,7 @@
             <div class="col-lg-6 align-self-center">
               <div class="sb-illustration-2 sb-mb-90">
                 <div class="sb-interior-frame">
-                  <img src="img/illustrations/interior.jpg" alt="office" class="sb-interior">
+                  <img src="/img/illustrations/interior.jpg" alt="office" class="sb-interior">
                 </div>
                 <div class="sb-square"></div>
                 <div class="sb-cirkle-1"></div>
@@ -241,7 +241,7 @@
               <!-- button -->
               <a href="#projeler" class="sb-btn sb-m-0">
                 <span class="sb-icon">
-                  <img src="img/ui/icons/arrow.svg" alt="icon">
+                  <img src="/img/ui/icons/arrow.svg" alt="icon">
                 </span>
                 <span>Projelerimizi görün</span>
               </a>
@@ -253,7 +253,7 @@
               <a href="contact.html" class="sb-categorie-card sb-categorie-card-2 sb-mb-30">
                 <div class="sb-card-body">
                   <div class="sb-category-icon">
-                    <img src="img/categories/1.png" alt="icon">
+                    <img src="/img/categories/1.png" alt="icon">
                   </div>
                   <div class="sb-card-descr">
                     <h3 class="sb-mb-10">AI Chatbot</h3>
@@ -266,7 +266,7 @@
               <a href="contact.html" class="sb-categorie-card sb-categorie-card-2 sb-mb-30">
                 <div class="sb-card-body">
                   <div class="sb-category-icon">
-                    <img src="img/categories/2.png" alt="icon">
+                    <img src="/img/categories/2.png" alt="icon">
                   </div>
                   <div class="sb-card-descr">
                     <h3 class="sb-mb-10">Veri Analizi</h3>
@@ -279,7 +279,7 @@
               <a href="contact.html" class="sb-categorie-card sb-categorie-card-2 sb-mb-30">
                 <div class="sb-card-body">
                   <div class="sb-category-icon">
-                    <img src="img/categories/3.png" alt="icon">
+                    <img src="/img/categories/3.png" alt="icon">
                   </div>
                   <div class="sb-card-descr">
                     <h3 class="sb-mb-10">Otomasyon</h3>
@@ -292,7 +292,7 @@
               <a href="contact.html" class="sb-categorie-card sb-categorie-card-2 sb-mb-30">
                 <div class="sb-card-body">
                   <div class="sb-category-icon">
-                    <img src="img/categories/4.png" alt="icon">
+                    <img src="/img/categories/4.png" alt="icon">
                   </div>
                   <div class="sb-card-descr">
                     <h3 class="sb-mb-10">Danışmanlık</h3>
@@ -327,7 +327,7 @@
               <!-- button -->
               <a href="contact.html" class="sb-btn">
                 <span class="sb-icon">
-                  <img src="img/ui/icons/arrow.svg" alt="icon">
+                  <img src="/img/ui/icons/arrow.svg" alt="icon">
                 </span>
                 <span>Teklif alın</span>
               </a>
@@ -339,7 +339,7 @@
               <div class="swiper-slide">
                 <a data-fancybox="projects" data-no-swup href="img/menu/1.jpg" class="sb-menu-item">
                   <div class="sb-cover-frame">
-                    <img src="img/menu/1.jpg" alt="project">
+                    <img src="/img/menu/1.jpg" alt="project">
                     <div class="sb-badge sb-vegan"><i class="fas fa-shield-alt"></i> AI</div>
                   </div>
                   <div class="sb-card-tp">
@@ -361,7 +361,7 @@
               <div class="swiper-slide">
                 <a data-fancybox="projects" data-no-swup href="img/menu/2.jpg" class="sb-menu-item">
                   <div class="sb-cover-frame">
-                    <img src="img/menu/2.jpg" alt="project">
+                    <img src="/img/menu/2.jpg" alt="project">
                     <div class="sb-badge sb-hot"><i class="fas fa-chart-line"></i> Analytics</div>
                   </div>
                   <div class="sb-card-tp">
@@ -383,7 +383,7 @@
               <div class="swiper-slide">
                 <a data-fancybox="projects" data-no-swup href="img/menu/3.jpg" class="sb-menu-item">
                   <div class="sb-cover-frame">
-                    <img src="img/menu/3.jpg" alt="project">
+                    <img src="/img/menu/3.jpg" alt="project">
                   </div>
                   <div class="sb-card-tp">
                     <h3 class="sb-card-title">CRM Otomasyon Sistemi</h3>
@@ -404,7 +404,7 @@
               <div class="swiper-slide">
                 <a data-fancybox="projects" data-no-swup href="img/menu/4.jpg" class="sb-menu-item">
                   <div class="sb-cover-frame">
-                    <img src="img/menu/4.jpg" alt="project">
+                    <img src="/img/menu/4.jpg" alt="project">
                   </div>
                   <div class="sb-card-tp">
                     <h3 class="sb-card-title">Envanter Yönetim Sistemi</h3>
@@ -425,7 +425,7 @@
               <div class="swiper-slide">
                 <a data-fancybox="projects" data-no-swup href="img/menu/5.jpg" class="sb-menu-item">
                   <div class="sb-cover-frame">
-                    <img src="img/menu/5.jpg" alt="project">
+                    <img src="/img/menu/5.jpg" alt="project">
                   </div>
                   <div class="sb-card-tp">
                     <h3 class="sb-card-title">Web Scraping Sistemi</h3>
@@ -459,7 +459,7 @@
             <div class="col-lg-6 align-self-center">
               <div class="sb-illustration-2 sb-mb-90">
                 <div class="sb-interior-frame">
-                  <img src="img/gallery/2.jpg" alt="office" class="sb-interior" style="object-position: center">
+                  <img src="/img/gallery/2.jpg" alt="office" class="sb-interior" style="object-position: center">
                 </div>
                 <div class="sb-square"></div>
                 <div class="sb-cirkle-1"></div>
@@ -478,7 +478,7 @@
               <h2 class="sb-mb-60">Verinin Mutfağı olarak <br>fark yaratıyoruz</h2>
               <p class="sb-text sb-mb-30">Veri analizi ve otomasyon alanında uzman ekibimizle, işletmelerin dijital dönüşüm yolculuğunda güvenilir partner oluyoruz. AI teknolojileri, veri bilimi ve süreç otomasyonu konularında derin uzmanlığımızla müşterilerimizin operasyonel verimliliğini artırıyoruz.</p>
               <p class="sb-text sb-mb-60">Her proje için özel çözümler geliştiriyor, müşterilerimizin ihtiyaçlarına tam olarak uygun sistemler tasarlıyoruz. Amacımız, verilerinizi değerli içgörülere dönüştürmek ve iş süreçlerinizi optimize etmektir.</p>
-              <img src="img/ui/signature.png" alt="İmza" class="sb-signature sb-mb-30">
+              <img src="/img/ui/signature.png" alt="İmza" class="sb-signature sb-mb-30">
             </div>
           </div>
         </div>
@@ -551,7 +551,7 @@
                 <!-- button -->
                 <a href="contact.html" class="sb-btn">
                   <span class="sb-icon">
-                    <img src="img/ui/icons/phone.svg" alt="icon">
+                    <img src="/img/ui/icons/phone.svg" alt="icon">
                   </span>
                   <span>Hemen başlayın</span>
                 </a>
@@ -559,7 +559,7 @@
                 <!-- button -->
                 <a href="#hizmetler" class="sb-btn sb-btn-2 sb-btn-gray">
                   <span class="sb-icon">
-                    <img src="img/ui/icons/menu.svg" alt="icon">
+                    <img src="/img/ui/icons/menu.svg" alt="icon">
                   </span>
                   <span>Hizmetler</span>
                 </a>
@@ -568,14 +568,14 @@
             </div>
             <div class="col-lg-6">
               <div class="sb-illustration-8">
-                <img src="img/illustrations/delivery.png" alt="consultation" class="sb-reserved">
+                <img src="/img/illustrations/delivery.png" alt="consultation" class="sb-reserved">
                 <div class="sb-cirkle-1"></div>
                 <div class="sb-cirkle-2"></div>
                 <div class="sb-cirkle-3"></div>
                 <div class="sb-cirkle-4"></div>
                 <div class="sb-cirkle-5"></div>
-                <img src="img/illustrations/2.svg" alt="icon" class="sb-pik-2">
-                <img src="img/illustrations/3.svg" alt="icon" class="sb-pik-3">
+                <img src="/img/illustrations/2.svg" alt="icon" class="sb-pik-2">
+                <img src="/img/illustrations/3.svg" alt="icon" class="sb-pik-3">
               </div>
             </div>
           </div>
@@ -589,7 +589,7 @@
           <div class="sb-footer-frame">
             <a href="index.html" class="sb-logo-frame">
               <!-- logo img -->
-              <img src="Verinin Mutfağı Logo 1.png" alt="Verinin Mutfağı">
+              <img src="/Verinin Mutfağı Logo 1.png" alt="Verinin Mutfağı">
             </a>
             <ul class="sb-social">
               <li><a href="#."><i class="fab fa-linkedin"></i></a></li>
@@ -610,25 +610,25 @@
   <!-- app wrapper end -->
 
   <!-- jquery js -->
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+  <script src="/js/plugins/jquery.min.js"></script>
   <!-- smooth scroll js -->
-  <script src="js/plugins/smooth-scroll.js"></script>
+  <script src="/js/plugins/smooth-scroll.js"></script>
   <!-- swup js -->
-  <script src="js/plugins/swup.min.js"></script>
+  <script src="/js/plugins/swup.min.js"></script>
   <!-- swiper js -->
-  <script src="js/plugins/swiper.min.js"></script>
+  <script src="/js/plugins/swiper.min.js"></script>
   <!-- datepicker js -->
-  <script src="js/plugins/datepicker.js"></script>
+  <script src="/js/plugins/datepicker.js"></script>
   <!-- isotope js -->
-  <script src="js/plugins/isotope.js"></script>
+  <script src="/js/plugins/isotope.js"></script>
   <!-- sticky -->
-  <script src="js/plugins/sticky.js"></script>
+  <script src="/js/plugins/sticky.js"></script>
   <!-- mapbox js -->
-  <script src="js/plugins/mapbox.min.js"></script>
+  <script src="/js/plugins/mapbox.min.js"></script>
   <!-- fancybox js -->
-  <script src="js/plugins/fancybox.min.js"></script>
+  <script src="/js/plugins/fancybox.min.js"></script>
   <!-- starbelly js -->
-  <script src="js/main.js"></script>
+  <script src="/js/main.js"></script>
 
 </body>
 
