Replace corrupted jQuery with CDN version

--- a/contact.html
+++ b/contact.html
@@ -25,6 +25,8 @@
   <link rel="stylesheet" href="/css/style.css">
   <!-- page title -->
   <title>İletişim - Verinin Mutfağı</title>
+  <!-- jquery from CDN -->
+  <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
 </head>
 
 <body>
@@ -265,8 +267,6 @@
   </div>
   <!-- app wrapper end -->
 
-  <!-- jquery js -->
-  <script src="/js/plugins/jquery.min.js"></script>
   <!-- smooth scroll js -->
   <script src="/js/plugins/smooth-scroll.js"></script>
   <!-- swup js -->
