Fix preloader and missing JavaScript files

--- a/index.html
+++ b/index.html
@@ -626,6 +626,7 @@
   <!-- fancybox js -->
   <script src="/js/plugins/fancybox.min.js"></script>
   <!-- starbelly js -->
+  <script src="/public/js/main.js"></script>
 
 </body>
 
